--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ font-size: 32px;
 color: rgb(42, 122, 228);
 }
 .chamada {
-background: rgb(184,156,213);
+background: rgb(180, 72, 153);
 padding-bottom: 80px;
 padding-top: 80px;
 display: flex;
