--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
 color: white;
 background: black;
 margin: 0px; }
+font-fam
+margin-bottom: 100px;
+
  header {
 border-bottom: solid 2px rgb(42, 122, 228);
 padding: 20px;
